2006-09-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpfu.py: document the new menu registration syntax.

2006-09-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpui.defs
	* plug-ins/pygimp/gimpui.override: wrap the new GimpHintBox widget.

	* plug-ins/pygimp/gimpfu.py: use it to display the blurb.

	* plug-ins/pygimp/plug-ins/py-slice.py: added missing verb in blurb.

2006-09-05  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimphintbox.[ch]: added simple widget to display
	a user hint. Having this as a widget will allow us to change the
	look, perhaps even using style properties.

	* libgimpwidgets/gimpwidgets.def: added the new symbols.

	* app/dialogs/keyboard-shortcuts-dialog.c
	* plug-ins/common/colormap-remap.c
	* plug-ins/common/redeye.c: use the new widget instead of
	duplicating the code.

2006-09-05  Michael Natterer  <mitch@gimp.org>

	* app/actions/debug-actions.c
	* app/actions/debug-commands.[ch]
	* menus/toolbox-menu.xml.in: added "Dump Attached Data" menu item
	which prints the stuff that is attached to the gimp and
	user_context objects.

2006-09-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/redeye.c (dialog): use the wilber icon / label
	combination for hints that is also used in colormap-remap.

2006-09-05  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimptool.[ch]: added gimp_tool_get_options() so tools
	don't need to include "core/gimptoolinfo.h" just to get to their
	options.

	* app/tools/gimp*tool.h: added macros GIMP_FOO_TOOL_GET_OPTIONS()
	which return specific tool options types and do all casting
	themselves.

	* app/tools/*.c: use the new macros and don't include
	"core/gimptoolinfo.h" in most files.

	* app/tools/gimpcolorpickertool.c (gimp_color_picker_tool_register):
	make it use the parent context's FG and BG.

	* app/tools/gimpcolortool.c (gimp_color_tool_real_picked): set the
	color on the tool's options, not on the user context.
